first map drawn

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,8 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${reference.PbmCommons.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -60,6 +61,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -107,6 +109,8 @@ javafx.run.width=800
 javafx.signing.blob=false
 javafx.signing.enabled=false
 javafx.signing.type=notsigned
+jlink.launcher=false
+jlink.launcher.name=CounselorFx
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
@@ -120,6 +124,8 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 native.bundling.enabled=false
 platform.active=default_platform
+project.PbmCommons=../PbmCommons
+reference.PbmCommons.jar=${project.PbmCommons}/dist/PbmCommons.jar
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
