--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,13 +34,18 @@ dist.jar=${dist.dir}/CounselorFx.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-logging-1.0.4.jar=C:\\Clash\\PbmCommons\\lib\\commons-logging-1.0.4.jar
+file.reference.log4j-1.2.13.jar=..\\PbmCommons\\lib\\log4j-1.2.13.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${reference.PbmCommons.jar}
+    ${reference.PbmCommons.jar}:\
+    ${file.reference.log4j-1.2.13.jar}:\
+    ${file.reference.commons-logging-1.0.4.jar}:\
+    ${reference.PbmPersistenceCommons.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -125,7 +130,9 @@ mkdist.disabled=false
 native.bundling.enabled=false
 platform.active=default_platform
 project.PbmCommons=../PbmCommons
+project.PbmPersistenceCommons=../PbmPersistenceCommons
 reference.PbmCommons.jar=${project.PbmCommons}/dist/PbmCommons.jar
+reference.PbmPersistenceCommons.jar=${project.PbmPersistenceCommons}/dist/PbmPersistenceCommons.jar
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
