--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,8 +34,19 @@ dist.jar=${dist.dir}/CounselorFx.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-logging-1.0.4.jar=C:\\Clash\\PbmCommons\\lib\\commons-logging-1.0.4.jar
+file.reference.apache-mime4j-0.6.jar=..\\PbmCommons\\lib\\apache-mime4j-0.6.jar
+file.reference.commons-logging-1.0.4.jar=..\\PbmCommons\\lib\\commons-logging-1.0.4.jar
+file.reference.httpclient-4.0.1.jar=..\\PbmCommons\\lib\\httpclient-4.0.1.jar
+file.reference.httpcore-4.0.1.jar=..\\PbmCommons\\lib\\httpcore-4.0.1.jar
+file.reference.httpmime-4.0.1.jar=..\\PbmCommons\\lib\\httpmime-4.0.1.jar
+file.reference.icu4j-3_6.jar=..\\PbmCommons\\lib\\icu4j-3_6.jar
+file.reference.iText-5.0.4.jar=..\\PbmCommons\\lib\\iText-5.0.4.jar
 file.reference.log4j-1.2.13.jar=..\\PbmCommons\\lib\\log4j-1.2.13.jar
+file.reference.mailapi.jar=..\\PbmCommons\\lib\\mailapi.jar
+file.reference.smtp.jar=..\\PbmCommons\\lib\\smtp.jar
+file.reference.xpp3-1.1.3_8.jar=..\\PbmCommons\\lib\\xpp3-1.1.3_8.jar
+file.reference.xpp3_min-1.1.4c.jar=..\\PbmCommons\\lib\\xpp3_min-1.1.4c.jar
+file.reference.xstream-1.3.1.jar=..\\PbmCommons\\lib\\xstream-1.3.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -45,7 +56,19 @@ javac.classpath=\
     ${reference.PbmCommons.jar}:\
     ${file.reference.log4j-1.2.13.jar}:\
     ${file.reference.commons-logging-1.0.4.jar}:\
-    ${reference.PbmPersistenceCommons.jar}
+    ${reference.PbmPersistenceCommons.jar}:\
+    ${file.reference.apache-mime4j-0.6.jar}:\
+    ${file.reference.commons-logging-1.0.4.jar}:\
+    ${file.reference.httpclient-4.0.1.jar}:\
+    ${file.reference.httpcore-4.0.1.jar}:\
+    ${file.reference.httpmime-4.0.1.jar}:\
+    ${file.reference.iText-5.0.4.jar}:\
+    ${file.reference.icu4j-3_6.jar}:\
+    ${file.reference.mailapi.jar}:\
+    ${file.reference.smtp.jar}:\
+    ${file.reference.xpp3-1.1.3_8.jar}:\
+    ${file.reference.xpp3_min-1.1.4c.jar}:\
+    ${file.reference.xstream-1.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
