Added more files to test. Added keys to properties to be easier to flip between them

--- a/properties.config
+++ b/properties.config
@@ -71,5 +71,10 @@ maximizeWindowOnStart=1
 minimizeMapOnStart=0
 saveDir=/clash/
 splitSize=660
-autoLoad=C:\\Clash\\counselorfx\\game_88_20.rr.egf
+#autoLoad=C:\\Clash\\counselorfx\\map_medium.rr.egf
+#autoLoad=C:\\Clash\\counselorfx\\map_small.rr.egf
+autoLoad=C:\\Clash\\counselorfx\\map_big.rr.egf
+#MapZoomPercent=50
 MapZoomPercent=100
+#MapZoomPercent=200
+MapCoordinatesSize=10
