--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,4 @@
-annotation.processing.enabled=true
+annotation.processing.enabled=false
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
@@ -157,7 +157,6 @@ project.PbmPersistenceCommons=../PbmPersistenceCommons
 reference.PbmCommons.jar=${project.PbmCommons}/dist/PbmCommons.jar
 reference.PbmPersistenceCommons.jar=${project.PbmPersistenceCommons}/dist/PbmPersistenceCommons.jar
 run.classpath=\
-    ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
 run.modulepath=\
