rendering for of war

--- a/properties.config
+++ b/properties.config
@@ -74,8 +74,9 @@ splitSize=660
 #autoLoad=C:\\Clash\\counselorfx\\map_medium.rr.egf
 #autoLoad=C:\\Clash\\counselorfx\\map_small.rr.egf
 autoLoad=C:\\Clash\\counselorfx\\map_big.rr.egf
-MapZoomPercent=50
-#MapZoomPercent=100
+#MapZoomPercent=50
+MapZoomPercent=100
 #MapZoomPercent=200
 MapCoordinatesSize=10
 MapGridRender=0
+MapCoordinateRender=1
