coloring cities by alliance, or by diplomacy

--- a/properties.config
+++ b/properties.config
@@ -80,4 +80,5 @@ MapZoomPercent=100
 MapCoordinatesSize=10
 MapGridRender=0
 MapCoordinateRender=1
-MapCityColorType=1
+MapCityColorType=2
+#MapCityColorType=4
