Added State Machine, file selection

--- a/properties.config
+++ b/properties.config
@@ -73,7 +73,7 @@ saveDir=/clash/
 splitSize=660
 #autoLoad=C:\\Clash\\counselorfx\\map_medium.rr.egf
 #autoLoad=C:\\Clash\\counselorfx\\map_small.rr.egf
-autoLoad=C:\\Clash\\counselorfx\\map_big.rr.egf
+#autoLoad=C:\\Clash\\counselorfx\\map_big.rr.egf
 #MapZoomPercent=50
 #MapZoomPercent=100
 #MapZoomPercent=200
