--- a/properties.config
+++ b/properties.config
@@ -42,7 +42,7 @@
 #PortraitsFolder = path of the folder with portraits, select using the Config screen.
 #
 #
-#Tue Apr 14 19:32:29 MDT 2020
+#Sat Apr 25 11:39:29 MDT 2020
 ActionListHeight=107
 ActionsMissingPopup=1
 AutoMoveNextAction=1
@@ -55,7 +55,14 @@ KeepPopupOpen=0
 LoadActionsBehavior=append
 LoadActionsOtherNations=allow
 LookAndFeelTheme=0
+MapCityColorType=1
+MapCoordinateRender=1
+MapCoordinatesSize=8
+MapGridRender=0
+MapRenderCoordinate=0
+MapRenderRoads=0
 MapTiles=2b
+MapZoomPercent=50
 MoveTagTransparency=2
 MyEmail=none
 SendOrderConfirmationPopUp=1
@@ -64,6 +71,7 @@ ShowArmyMovPath=1
 TableActionColumnAdjust=0
 TableColumnAdjust=0
 TableRowAdjust=1
+autoLoad=C\:\\Clash\\counselorfx\\map_big.rr.egf
 filtro.default=0
 language=en
 loadDir=/clash/
@@ -71,14 +79,3 @@ maximizeWindowOnStart=1
 minimizeMapOnStart=0
 saveDir=/clash/
 splitSize=660
-#autoLoad=C:\\Clash\\counselorfx\\map_medium.rr.egf
-#autoLoad=C:\\Clash\\counselorfx\\map_small.rr.egf
-autoLoad=C:\\Clash\\counselorfx\\map_big.rr.egf
-#MapZoomPercent=50
-#MapZoomPercent=100
-#MapZoomPercent=200
-MapCoordinatesSize=10
-MapGridRender=0
-MapCoordinateRender=1
-MapCityColorType=2
-#MapCityColorType=4
