lots of configs done

--- a/properties.config
+++ b/properties.config
@@ -42,7 +42,7 @@
 #PortraitsFolder = path of the folder with portraits, select using the Config screen.
 #
 #
-#Sat Apr 25 11:39:29 MDT 2020
+#Sat Apr 25 17:10:41 MDT 2020
 ActionListHeight=107
 ActionsMissingPopup=1
 AutoMoveNextAction=1
@@ -58,9 +58,28 @@ LookAndFeelTheme=0
 MapCityColorType=1
 MapCoordinateRender=1
 MapCoordinatesSize=8
+MapDrawAllArmyIcons=1
 MapGridRender=0
+MapRenderArmy=1
+MapRenderArmyTrack=1
+MapRenderBridge=1
+MapRenderCharacters=1
+MapRenderCities=1
+MapRenderCity=1
+MapRenderCombats=1
 MapRenderCoordinate=0
-MapRenderRoads=0
+MapRenderCreek=1
+MapRenderFogOfWar=0
+MapRenderFortification=1
+MapRenderGrid=0
+MapRenderItems=1
+MapRenderLanding=1
+MapRenderLandmark=1
+MapRenderOverrun=0
+MapRenderRiver=1
+MapRenderRoads=1
+MapRenderSpan=1
+MapTerrainTile=4
 MapTiles=2b
 MapZoomPercent=50
 MoveTagTransparency=2
