Ant settings to deploy a self-contained javafx application.

--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?><!-- You may freely edit this file. See commented blocks below for --><!-- some examples of how to customize the build. --><!-- (If you delete it and reopen the project it will be recreated.) --><!-- By default, only the Clean and Build commands use this build script. --><project name="CounselorFx" default="default" basedir="." xmlns:fx="javafx:com.sun.javafx.tools.ant">
+<?xml version="1.0" encoding="UTF-8"?><!-- You may freely edit this file. See commented blocks below for --><!-- some examples of how to customize the build. --><!-- (If you delete it and reopen the project it will be recreated.) --><!-- By default, only the Clean and Build commands use this build script. -->
+<project name="CounselorFx" default="default" basedir="." xmlns:fx="javafx:com.sun.javafx.tools.ant">
     <description>Builds, tests, and runs the project CounselorFx.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
@@ -50,4 +51,17 @@
     nbproject/build-impl.xml and nbproject/jfx-impl.xml.
 
     -->
+    <target name="-post-jfx-deploy">
+       <fx:deploy width="${javafx.run.width}" height="${javafx.run.height}" 
+                  nativeBundles="exe"
+                  outdir="${basedir}/${dist.dir}" outfile="${application.title}">
+          <fx:application name="${application.title}" mainClass="${javafx.main.class}" version="1.0" />
+          <fx:resources>
+              <fx:fileset dir="${basedir}/${dist.dir}" includes="*.jar"/>
+              <fx:fileset dir="${basedir}/${dist.dir}" includes="lib/*.jar"/>
+          </fx:resources>
+          <fx:info title="${application.title}"  vendor="${application.vendor}"/>
+          <fx:preferences shortcut="true"/>
+        </fx:deploy>          
+    </target>
 </project>
