--- a/properties.config
+++ b/properties.config
@@ -42,7 +42,7 @@
 #PortraitsFolder = path of the folder with portraits, select using the Config screen.
 #
 #
-#Sun Apr 26 17:38:59 MDT 2020
+#Thu Apr 30 18:01:10 MDT 2020
 ActionListHeight=107
 ActionsMissingPopup=1
 AutoMoveNextAction=1
@@ -57,7 +57,7 @@ LoadActionsOtherNations=allow
 LookAndFeelTheme=0
 MapCityColorType=1
 MapCoordinateRender=1
-MapCoordinatesSize=8
+MapCoordinatesSize=18
 MapDrawAllArmyIcons=1
 MapGridRender=0
 MapRenderArmy=1
@@ -90,6 +90,7 @@ ShowArmyMovPath=1
 TableActionColumnAdjust=0
 TableColumnAdjust=0
 TableRowAdjust=1
+UiStyle=2
 autoLoad=C\:\\Clash\\counselorfx\\map_big.rr.egf
 filtro.default=0
 language=en
