Combat icon animated on map. Final sprite

--- a/properties.config
+++ b/properties.config
@@ -42,7 +42,7 @@
 #PortraitsFolder = path of the folder with portraits, select using the Config screen.
 #
 #
-#Fri May 01 21:42:51 MDT 2020
+#Sun May 10 16:21:05 MDT 2020
 ActionListHeight=107
 ActionsMissingPopup=1
 AutoMoveNextAction=1
@@ -52,6 +52,7 @@ CopyActionsPopUp=1
 HexTagFrame=0
 HexTagStyle=0
 KeepPopupOpen=0
+LastFolder=C\:\\Users\\jmoura\\Downloads\\game_635_2.murazorgames.rr.egf
 LoadActionsBehavior=append
 LoadActionsOtherNations=allow
 LookAndFeelTheme=0
@@ -74,7 +75,7 @@ MapRenderFortification=1
 MapRenderGrid=0
 MapRenderItems=1
 MapRenderLanding=1
-MapRenderLandmark=0
+MapRenderLandmark=1
 MapRenderOverrun=1
 MapRenderRiver=1
 MapRenderRoads=1
@@ -91,7 +92,6 @@ TableActionColumnAdjust=0
 TableColumnAdjust=0
 TableRowAdjust=1
 UiStyle=1
-autoLoad=C\:\\Clash\\counselorfx\\map_big.rr.egf
 filtro.default=0
 language=en
 loadDir=/clash/
