--- a/build.xml
+++ b/build.xml
@@ -50,10 +50,9 @@
     For list of available properties check the files
     nbproject/build-impl.xml and nbproject/jfx-impl.xml.
 
-    -->
     <target name="-post-jfx-deploy">
        <fx:deploy width="${javafx.run.width}" height="${javafx.run.height}" 
-                  nativeBundles="exe"
+                  nativeBundles="exe"  verbose="true"
                   outdir="${basedir}/${dist.dir}" outfile="${application.title}">
           <fx:application name="${application.title}" mainClass="${javafx.main.class}" version="1.0" />
           <fx:resources>
@@ -64,4 +63,5 @@
           <fx:preferences shortcut="true"/>
         </fx:deploy>          
     </target>
+    -->
 </project>
