Combat icon animated on map. Final sprite. Big Army and Big Navy done also

--- a/properties.config
+++ b/properties.config
@@ -37,12 +37,12 @@
 #LookAndFeelFontSize= 0-72 -> select the system default font size.
 #TableRowAdjust = 0|1 -> Yes|No, adjust row heights to the content size, important if using larger fonts.
 #ActionListHeight = 107-999 -> defines the size for the action list window under the character's tab, to look better on high resolution screens.
-#MoveTagTransparency = 0-10 | defines how transparent the distance disks are when ploted on map. 0 means no trasnparency, 10 means fully transparent.
-#ShowCharacterPortraits = 0|1 -> Hide|Show, displays the characters portrats or not.
+#MoveTagTransparency = 0-10 | defines how transparent the distance disks are when plotted on map. 0 means no transparency, 10 means fully transparent.
+#ShowCharacterPortraits = 0|1 -> Hide|Show, displays the characters portraits or not.
 #PortraitsFolder = path of the folder with portraits, select using the Config screen.
 #
 #
-#Sun May 10 16:21:05 MDT 2020
+#Sun May 10 16:53:25 MDT 2020
 ActionListHeight=107
 ActionsMissingPopup=1
 AutoMoveNextAction=1
@@ -52,7 +52,7 @@ CopyActionsPopUp=1
 HexTagFrame=0
 HexTagStyle=0
 KeepPopupOpen=0
-LastFolder=C\:\\Users\\jmoura\\Downloads\\game_635_2.murazorgames.rr.egf
+LastFolder=C\:\\Users\\jmoura\\Downloads
 LoadActionsBehavior=append
 LoadActionsOtherNations=allow
 LookAndFeelTheme=0
@@ -75,7 +75,7 @@ MapRenderFortification=1
 MapRenderGrid=0
 MapRenderItems=1
 MapRenderLanding=1
-MapRenderLandmark=1
+MapRenderLandmark=0
 MapRenderOverrun=1
 MapRenderRiver=1
 MapRenderRoads=1
