--- a/properties.config
+++ b/properties.config
@@ -42,7 +42,7 @@
 #PortraitsFolder = path of the folder with portraits, select using the Config screen.
 #
 #
-#Sun May 10 16:53:25 MDT 2020
+#Sun May 31 11:34:31 MDT 2020
 ActionListHeight=107
 ActionsMissingPopup=1
 AutoMoveNextAction=1
@@ -58,7 +58,7 @@ LoadActionsOtherNations=allow
 LookAndFeelTheme=0
 MapCityColorType=1
 MapCoordinateRender=1
-MapCoordinatesSize=18
+MapCoordinatesSize=10
 MapDrawAllArmyIcons=1
 MapGridRender=0
 MapRenderArmy=1
@@ -75,14 +75,14 @@ MapRenderFortification=1
 MapRenderGrid=0
 MapRenderItems=1
 MapRenderLanding=1
-MapRenderLandmark=0
+MapRenderLandmark=1
 MapRenderOverrun=1
 MapRenderRiver=1
 MapRenderRoads=1
 MapRenderSpan=1
 MapTerrainTile=1
 MapTiles=2b
-MapZoomPercent=2
+MapZoomPercent=1
 MoveTagTransparency=2
 MyEmail=none
 SendOrderConfirmationPopUp=1
@@ -92,6 +92,7 @@ TableActionColumnAdjust=0
 TableColumnAdjust=0
 TableRowAdjust=1
 UiStyle=1
+autoLoad=C\:\\Users\\jmoura\\Downloads\\game_646_1.murazorgames.rr.egf
 filtro.default=0
 language=en
 loadDir=/clash/
