Added victory points graphs to toolbar menu

--- a/properties.config
+++ b/properties.config
@@ -42,7 +42,7 @@
 #PortraitsFolder = path of the folder with portraits, select using the Config screen.
 #
 #
-#Wed Jul 01 15:33:26 MDT 2020
+#Sun Aug 16 15:00:19 MDT 2020
 ActionListHeight=107
 ActionsMissingPopup=1
 AutoMoveNextAction=1
@@ -99,3 +99,4 @@ maximizeWindowOnStart=1
 minimizeMapOnStart=0
 saveDir=/clash/
 splitSize=660
+autoLoad=map_medium.rr.egf
